fix:layouts 改成iphone12pro的px

--- a/frontend/src/components/Layouts/Layouts.module.scss
+++ b/frontend/src/components/Layouts/Layouts.module.scss
@@ -1,10 +1,11 @@
 .layouts {
-    margin-top: 5%;
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 548.6px; /* 844*0.65 */
-    width: 253.5px; /*390*0.65*/
-    background: white;
+  margin-top: 5%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 844px; /* 844*0.65=548.6px */
+  width: 390px; /*390*0.65=253.5px*/
+  background: white;
+  flex-direction: column;
 }
