--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -1,2 +1,97 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-@import '../../styles/globals.scss';
+@import '../../styles/global.scss';
+
+.Logo {
+    display: flex;
+    align-items: flex-end;
+
+    .first {
+        font-size: 36px;
+        font-weight: 700;
+        color: $mainRed;
+    }
+
+    .others {
+        font-size: 24px;
+        font-weight: 700;
+        color: $mainYellow;
+        margin-bottom: 2.5%;
+    }
+}
+
+.selectBlock {
+
+}
+
+.devide {
+    width: 84.10%;
+    height: 4px;
+    background-color: $mainYellow;
+    margin: 4.5% auto;
+}
+
+.distance {
+    margin-right: auto;
+}
+
+.Restaurant {
+    width: 84.10%;
+    height: 14.72%;
+    display: flex;
+    border: 1px solid $DarkGrey;
+    border-radius: 10px;
+    margin: 4.5% auto;
+
+    .picture {
+        width: 40%;
+        height: full;
+        border-radius: 10px 0px 0px 10px;
+        background-color: $mainYellow;
+    }
+
+    .info {
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 0px 5%;
+        
+        .restaurantName {
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 19.36px;
+        }
+
+        .tag {
+            width: 33%;
+            height: 25%;
+            background-color: $lightGrey;
+            border-radius: 20px;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: center;
+        }
+
+        .waitTime {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+
+            .text {
+                font-size: 12px;
+                font-weight: 400;
+                line-height: 24px;
+            }
+
+            .time {
+                font-size: 24px;
+                font-weight: 700;
+                line-height: 0px;
+                margin-left: auto;
+                margin-right: 2%;
+                color: $mainRed;
+            }
+        }
+    }
+}
