--- a/frontend/src/components/Layouts/Layouts.module.scss
+++ b/frontend/src/components/Layouts/Layouts.module.scss
@@ -1,11 +1,15 @@
 .layouts {
   margin-top: 5%;
-  border: 1px solid black;
+  border: 5px solid black;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 844px; /* 844*0.65=548.6px */
   width: 390px; /*390*0.65=253.5px*/
   background: white;
   flex-direction: column;
+  overflow-y: auto;
+  &::-webkit-scrollbar {
+    width: 0px;
+  }
 }
