--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -38,15 +38,37 @@
     width: 84.10%;
     height: 14.72%;
     display: flex;
-    border: 1px solid $DarkGrey;
+    border: 1px solid $Grey;
     border-radius: 10px;
-    margin: 4.5% auto;
+    margin: 2.5% auto;
 
     .picture {
+        display: flex;
         width: 40%;
         height: full;
+        justify-content: center;
+        align-items: center;
         border-radius: 10px 0px 0px 10px;
-        background-color: $mainYellow;
+        background-color: $mainRed;
+
+        .bookingTag {
+            display: flex;
+            justify-content: center;
+            column-gap: 5%;
+            width: 100px;
+
+            .tick {
+                display: flex;
+                align-items: center;
+                text-align: center;
+            }
+
+            .text {
+                font-size: 12px;
+                font-weight: 700;
+                color: #fff;
+            }
+        }
     }
 
     .info {
@@ -91,6 +113,55 @@
                 margin-left: auto;
                 margin-right: 2%;
                 color: $mainRed;
+            }
+        }
+    }
+
+    .info_isBooking {
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 0px 5%;
+        
+        .restaurantName {
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 19.36px;
+            color: $DarkGrey;
+        }
+
+        .tag {
+            width: 33%;
+            height: 25%;
+            background-color: $lightGrey;
+            border-radius: 20px;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 24px;
+            text-align: center;
+            color: $DarkGrey;
+        }
+
+        .waitTime {
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+
+            .text {
+                font-size: 12px;
+                font-weight: 400;
+                line-height: 24px;
+                color: $Grey;
+            }
+
+            .time {
+                font-size: 24px;
+                font-weight: 700;
+                line-height: 0px;
+                margin-left: auto;
+                margin-right: 2%;
+                color: $Grey;
             }
         }
     }
