feat:客製化+setCookies+商品數量

--- a/frontend/src/components/Layouts/Layouts.module.scss
+++ b/frontend/src/components/Layouts/Layouts.module.scss
@@ -9,6 +9,7 @@
   background: white;
   flex-direction: column;
   overflow-y: auto;
+  position: relative;
   &::-webkit-scrollbar {
     width: 0px;
   }
