--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -20,22 +20,76 @@
 }
 
 .selectBlock {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    margin: 3% auto;
 
+    .selectPeople {
+        width: 55%;
+        display: flex;
+        column-gap: 10%;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid $mainRed;
+        border-radius: 10px;
+
+        .selectText {
+            color: $Grey;
+        }
+
+        .text {
+            font-size: 14px;
+            font-weight: 500;
+            color: $mainRed;
+        }
+    }
+
+    .historyOrder {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 10%;
+        border: 1px solid $mainRed;
+        border-radius: 10px;
+
+        .iconOrder {
+            position: relative;
+            width: 10.5px;
+            height: 14px;
+            border: 1px solid $mainRed;
+            border-radius: 1px;
+
+            .icon2 {
+                position: absolute;
+                bottom: 1px;
+                left: 0.5px;
+            }
+        }
+
+        .text {
+            font-size: 14px;
+            font-weight: 500;
+            color: $mainRed;
+        }
+    }
 }
 
 .devide {
-    width: 84.10%;
+    width: 85%;
     height: 4px;
     background-color: $mainYellow;
-    margin: 4.5% auto;
+    margin: 3% auto 4.5%;
 }
 
 .distance {
     margin-right: auto;
+    margin-left: 7.5%;
 }
 
 .Restaurant {
-    width: 84.10%;
+    width: 85%;
     height: 14.72%;
     display: flex;
     border: 1px solid $Grey;
