--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -53,6 +53,7 @@
         column-gap: 10%;
         border: 1px solid $mainRed;
         border-radius: 10px;
+        cursor: pointer;
 
         .iconOrder {
             position: relative;
@@ -218,5 +219,86 @@
                 color: $Grey;
             }
         }
+    }
+}
+
+.overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 999;
+
+    .searchBlock {
+        position: relative;
+        width: 83.5%;
+        height: 23%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 20px;
+
+        .cancle {
+            position: absolute;
+            border: none;
+            background: rgba(0, 0, 0, 0);
+            right: 7px;
+            top: 7px;
+        }
+
+        .title {
+            font-size: 16px;
+            font-weight: 500;
+        }
+        
+        .inputBlock {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            padding: 5% 8% 10%;
+
+            .inputLabel {
+                font-size: 14px;
+                align-self: flex-start;
+
+            }
+
+            .inputBar {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 95%;
+                border: 1px solid $DarkGrey;
+                border-radius: 10px;
+                padding: 2.5%;
+
+                input {
+                    width: 80%;
+                    border: none;
+                    outline: none;
+                }
+
+                .submit {
+                    background-color: $Grey;
+                    border: none;
+                    border-radius: 10px;
+                    padding: 1.5% 3%;
+                }
+            }
+        }
+
+        
+
+        
     }
 }
