style(homepage): fix searching floating box's cancle button

--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -252,6 +252,7 @@
             background: rgba(0, 0, 0, 0);
             right: 7px;
             top: 7px;
+            cursor: pointer;
         }
 
         .title {
