--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -233,7 +233,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    z-index: 999;
+    z-index: 100;
 
     .searchBlock {
         position: relative;
@@ -245,6 +245,7 @@
         align-items: center;
         background-color: #fff;
         border-radius: 20px;
+        overflow-y: scroll;
 
         .cancle {
             position: absolute;
