--- a/frontend/src/pages/Booking/Booking.module.scss
+++ b/frontend/src/pages/Booking/Booking.module.scss
@@ -200,6 +200,7 @@
   padding-bottom: 10px;
 }
 .productCol {
+  position: relative;
   width: 100%;
   border-bottom: 1px solid $lightGrey;
 }
@@ -210,4 +211,38 @@
   color: $DarkGrey;
 
   font-size: 16px;
+}
+.productChosenQuantity {
+  background: $mainYellow;
+  width: 44px;
+  height: 44px;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 50%;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+//購物車有東西
+.cartButton {
+  z-index: 5;
+  position: fixed;
+  bottom: 5%;
+  width: 340px;
+  align-self: center;
+  background: $mainLinear;
+  border: 0px;
+  height: 63px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  box-sizing: border-box;
 }
