--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -82,6 +82,7 @@
     height: 4px;
     background-color: $mainYellow;
     margin: 3% auto 4.5%;
+    z-index: 99;
 }
 
 .distance {
@@ -91,7 +92,7 @@
 
 .Restaurant {
     width: 85%;
-    height: 14.72%;
+    height: 7rem;
     display: flex;
     border: 1px solid $Grey;
     border-radius: 10px;
@@ -131,12 +132,12 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        padding: 0px 5%;
+        padding: 0px 6%;
         
         .restaurantName {
             font-size: 16px;
             font-weight: 700;
-            line-height: 19.36px;
+            line-height: 15px;
         }
 
         .tag {
@@ -162,7 +163,7 @@
             }
 
             .time {
-                font-size: 24px;
+                font-size: 23px;
                 font-weight: 700;
                 line-height: 0px;
                 margin-left: auto;
@@ -177,12 +178,12 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        padding: 0px 5%;
+        padding: 0px 6%;
         
         .restaurantName {
             font-size: 16px;
             font-weight: 700;
-            line-height: 19.36px;
+            line-height: 15px;
             color: $DarkGrey;
         }
 
@@ -211,7 +212,7 @@
             }
 
             .time {
-                font-size: 24px;
+                font-size: 23px;
                 font-weight: 700;
                 line-height: 0px;
                 margin-left: auto;
