--- a/frontend/src/pages/Booking/Booking.module.scss
+++ b/frontend/src/pages/Booking/Booking.module.scss
@@ -68,12 +68,14 @@
   }
 }
 .inputSquare {
-  margin: 8%;
+  margin: 0 8%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
+  gap: 20px;
 }
 .inputGroup {
   width: 100%;
@@ -100,7 +102,8 @@
   flex-shrink: 0;
   color: #000;
   display: flex;
-  padding: 0.5% 0%;
+  padding: 0.5% 3%;
+  box-sizing: border-box;
   align-items: center;
   justify-content: flex-start;
 }
