--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -279,14 +279,14 @@
     .searchBlock {
         position: relative;
         width: 83.5%;
-        height: 23%;
+        max-height: 50%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         background-color: #fff;
         border-radius: 20px;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         .cancle {
             position: absolute;
@@ -300,6 +300,7 @@
         .title {
             font-size: 16px;
             font-weight: 500;
+            margin-top: 1.5rem;
         }
         
         .inputBlock {
@@ -308,7 +309,7 @@
             justify-content: center;
             align-items: center;
             width: 100%;
-            padding: 0px 8% 8%;
+            padding: 0px 8% 1rem;
 
             .inputLabel {
                 font-size: 14px;
@@ -370,7 +371,7 @@
             display: flex;
             border: 1px solid $Grey;
             border-radius: 10px;
-            margin: 2.5% auto;
+            margin: 1% auto 1rem;
 
             .picture {
                 display: flex;
