--- a/frontend/src/pages/Product/Product.module.scss
+++ b/frontend/src/pages/Product/Product.module.scss
@@ -102,6 +102,7 @@
 }
 
 .addCartButton {
+  cursor: pointer;
   width: 100%;
   height: 63px;
   background: $mainRed;
@@ -116,6 +117,7 @@
   bottom: 0;
 }
 .optionsName {
+  cursor: pointer;
   height: 34px;
   display: flex;
   align-items: center;
