--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -101,7 +101,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1.5%;
+    margin-bottom: 3.5%;
 
     .distance {
         font-size: 16px;
@@ -130,11 +130,11 @@
 
 .Restaurant {
     width: 85%;
-    height: 7rem;
+    height: 8rem;
     display: flex;
     border: 1px solid $Grey;
     border-radius: 10px;
-    margin: 2.5% auto;
+    margin: 0 auto;
 
     p {
         text-decoration: none;
@@ -148,6 +148,7 @@
         align-items: center;
         border-radius: 10px 0px 0px 10px;
         background-color: $mainRed;
+        object-fit: cover;
 
         .bookingTag {
             display: flex;
@@ -184,7 +185,7 @@
 
         .tag {
             width: 33%;
-            height: 25%;
+            height: 1.5rem;
             background-color: $lightGrey;
             border-radius: 20px;
             font-size: 12px;
