--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -192,6 +192,7 @@
             font-weight: 400;
             line-height: 24px;
             text-align: center;
+            margin-bottom: 0.5rem;
         }
 
         .waitTime {
@@ -200,7 +201,7 @@
             align-items: flex-start;
 
             .text {
-                font-size: 12px;
+                font-size: 13px;
                 font-weight: 400;
                 line-height: 24px;
             }
