style(homepage): adjust phone inputbox css

--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -383,6 +383,7 @@
                     border: none;
                     border-radius: 10px;
                     padding: 1.5% 3%;
+                    cursor: pointer;
                 }
             }
 
@@ -407,6 +408,7 @@
                     border-radius: 10px;
                     padding: 1.5% 3%;
                     color:#fff;
+                    cursor: pointer;
                 }
             }
         }
