--- a/frontend/src/pages/Booking/Booking.module.scss
+++ b/frontend/src/pages/Booking/Booking.module.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jaldi&display=swap');
 
 .order {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -11,6 +12,7 @@
   gap: 20px;
 }
 .orderInfo {
+  position: relative;
   flex-direction: column;
   gap: 10px;
   display: flex;
