--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -134,7 +134,7 @@
     display: flex;
     border: 1px solid $Grey;
     border-radius: 10px;
-    margin: 0 auto;
+    margin: 0 auto 1rem;
 
     p {
         text-decoration: none;
@@ -315,14 +315,15 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 130%;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 100;
 
     .searchBlock {
-        position: relative;
+        position: absolute;
         width: 83.5%;
-        max-height: 50%;
+        max-height: 23rem;
+        top: 15rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
