style(homepage): fix booking tag style

--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -233,7 +233,7 @@
 
         .tag {
             width: 33%;
-            height: 25%;
+            height: 1.5rem;
             background-color: $lightGrey;
             border-radius: 20px;
             font-size: 12px;
