--- a/frontend/src/pages/Cart/Cart.module.scss
+++ b/frontend/src/pages/Cart/Cart.module.scss
@@ -118,3 +118,78 @@
   color: #fff;
   font-weight: 700;
 }
+//外帶填寫資料
+.inputGroup {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.inputTitle {
+  color: #000;
+  font-family: 'Inter';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.inputText {
+  border-radius: 10px;
+  border: 1px solid var(--unnamed, #959595);
+  background: #fff;
+  width: 309px;
+  height: 45px;
+  flex-shrink: 0;
+  color: #000;
+  display: flex;
+  padding: 0.5% 3%;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: flex-start;
+}
+.errorMessage {
+  bottom: 0;
+  // position: absolute;
+  // z-index: 2;
+  display: grid;
+  color: red;
+  font-family: 'Alkatra', sans-serif;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+.orderButton {
+  cursor: pointer;
+  width: 309px;
+  height: 53px;
+  color: #000;
+  font-family: 'Inter';
+  font-size: 20px;
+  letter-spacing: 2px;
+  border-radius: 10px;
+  background: $mainYellow;
+  border: 0px;
+}
+.orderButtonCancel {
+  background: $lightGrey;
+  width: 309px;
+  height: 53px;
+  color: #000;
+  font-family: 'Inter';
+  font-size: 20px;
+  letter-spacing: 2px;
+  border-radius: 10px;
+  border: 0px;
+}
+.orderButtonRemind {
+  color: $DarkGrey;
+  font-family: Inter;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1px;
+}
