--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -147,8 +147,13 @@
         justify-content: center;
         align-items: center;
         border-radius: 10px 0px 0px 10px;
-        background-color: $mainRed;
-        object-fit: cover;
+
+        img {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px 0px 0px 10px;
+            object-fit: cover;
+        }
 
         .bookingTag {
             display: flex;
@@ -430,8 +435,13 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 10px 0px 0px 10px;
-                background-color: $mainRed;
-                object-fit: cover;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 10px 0px 0px 10px;
+                    object-fit: cover;
+                }
 
                 .bookingTag {
                     display: flex;
