--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -435,13 +435,14 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 10px 0px 0px 10px;
+                background-color: $mainRed;
 
-                img {
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 10px 0px 0px 10px;
-                    object-fit: cover;
-                }
+                // img {
+                //     width: 100%;
+                //     height: 100%;
+                //     border-radius: 10px 0px 0px 10px;
+                //     object-fit: cover;
+                // }
 
                 .bookingTag {
                     display: flex;
