feat:menu 水平選項sticky時的背景透明漸層

--- a/frontend/src/pages/Booking/Booking.module.scss
+++ b/frontend/src/pages/Booking/Booking.module.scss
@@ -190,7 +190,7 @@
   position: sticky;
   top: 0;
   padding: 20px 0px 0 40px;
-  background-color: #fff;
+  background: linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
   box-sizing: border-box;
   z-index: 100;
   flex-wrap: nowrap;
