feat(order get api): create order get API and map order component

--- a/frontend/src/pages/Checkout/Checkout.module.scss
+++ b/frontend/src/pages/Checkout/Checkout.module.scss
@@ -79,6 +79,7 @@
             gap: 1rem;
             justify-content: flex-start;
             align-items: center;
+            overflow-y: auto;
 
             .order {
                 width: 30rem;
