--- a/frontend/src/pages/Checkout/Checkout.module.scss
+++ b/frontend/src/pages/Checkout/Checkout.module.scss
@@ -90,6 +90,7 @@
                 display: flex;
                 align-items: center;
                 padding: 0px 1.5rem;
+                cursor: pointer;
 
                 .block {
                     height: 6rem;
