fix:order search該手機號碼沒有訂單

--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -564,3 +564,9 @@
   background: transparent;
   font-size: 12px;
 }
+.noOrder {
+  color: $mainRed;
+  font-weight: 700;
+  font-family: 'Inter';
+  padding: 20px 0px;
+}
