fix:order search當按下送出按鈕 才會去判斷有沒有訂單

--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -355,7 +355,8 @@
     display: flex;
     width: 85%;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 700;
+    font-family: 'Inter';
     margin-top: 1.5rem;
     border-bottom: 5px $mainYellow solid;
     padding-bottom: 20px;
