--- a/frontend/src/pages/Checkout/Checkout.module.scss
+++ b/frontend/src/pages/Checkout/Checkout.module.scss
@@ -34,8 +34,10 @@
 
     .item {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
         width: 80%;
         height: 7.3rem;
         background-color: $mainRed;
