--- a/frontend/src/components/Alert/Alert.module.scss
+++ b/frontend/src/components/Alert/Alert.module.scss
@@ -34,6 +34,10 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .context {
   color: var(--unnamed, #959595);
