--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 body {
   background: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Inter';
+  font-family: 'Noto Sans TC', sans-serif, 'Inter';
 }
