fix:改為內用alert確定後只會關掉alert & alert動畫

--- a/frontend/src/components/Alert/Alert.module.scss
+++ b/frontend/src/components/Alert/Alert.module.scss
@@ -14,6 +14,26 @@
   align-items: center;
   gap: 10px;
   padding: 10px 0;
+  transform: translateY(100%);
+  opacity: 0;
+  transition:
+    transform 0.3s ease,
+    opacity 0.3s ease;
+  animation: scale-up 0.3s forwards;
+  @keyframes scale-up {
+    0% {
+      transform: scale(0.8);
+      opacity: 0;
+    }
+    70% {
+      transform: scale(1.1);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
 }
 .overlay {
   position: absolute;
@@ -82,4 +102,18 @@
   color: $DarkGrey;
   background: transparent;
   border: 1px solid $DarkGrey;
+}
+.alertImg {
+  animation: shake 0.5s infinite alternate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  @keyframes shake {
+    from {
+      transform: translateX(-1px);
+    }
+    to {
+      transform: translateX(1px);
+    }
+  }
 }
