fix(checkout page): fix checkout feature bugs and create alert when checkout

--- a/frontend/src/components/Alert/Alert.module.scss
+++ b/frontend/src/components/Alert/Alert.module.scss
@@ -34,6 +34,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-top: 0.5rem;
 }
 .context {
   color: var(--unnamed, #959595);
