--- a/frontend/src/pages/Cart/Cart.module.scss
+++ b/frontend/src/pages/Cart/Cart.module.scss
@@ -94,6 +94,7 @@
   gap: 20px;
 }
 .cartTotalSquare {
+  filter: drop-shadow(0px -17px 20px rgba(255, 255, 255, 0.8));
   height: 65px;
   background: $mainYellow;
   padding: 0 8%;
